--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "Exp.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack-dev-server --open --color --compress --hot",
-    "webpack": "webpack"
+    "start": "parcel serve src/index.html",
+    "build": "parcel build src/Exp.js ./lib"
   },
   "repository": {
     "type": "git",
@@ -19,12 +18,13 @@
     "url": "https://github.com/hackal/Exp/issues"
   },
   "homepage": "https://github.com/hackal/Exp#readme",
-  "dependencies": {},
+  "dependencies": {
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.4",
+    "parcel-bundler": "^1.6.2",
+    "typescript": "^2.7.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "babel-core": "^6.26.0"
   }
 }
