--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "exp-framework",
+  "name": "Exp",
   "version": "1.1.0",
   "description": "Lightweight framework designed for building banner in Exponea platform.",
   "main": "src/Exp.js",
