--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
     "parcel-bundler": "^1.6.2"
+  },
+  "dependencies": {
+    "raven-js": "^3.24.2"
   }
 }
