--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
 - npm install
 script:
-- parcel build src/test.js
+- parcel build src/index.html && parcel build src/Exp.js
 deploy:
   on:
     tags: true
