--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ before_install:
 install:
 - npm install
 script:
-- parcel build src/index.html && parcel build src/Exp.js
+- parcel build src/index.html --no-minify --public-url / && parcel build src/Exp.js
+- ls dist
 deploy:
   on:
     branch: master
