--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Exp",
+  "name": "exp",
   "version": "1.1.0",
   "description": "Lightweight framework designed for building banner in Exponea platform.",
   "main": "src/exp.js",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/hackal/Exp#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.6.1",
     "parcel-bundler": "^1.6.2"
   },
